--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
               1. Acceptance of Terms
             </h4>
             <p>
-              By accessing and using this Community Portal, you accept and agree
-              to be bound by the terms and provisions of this agreement. In
-              addition, when using these particular services, you shall be
+              By accessing and using this Admin Portal, you accept and agree to
+              be bound by the terms and provisions of this agreement. In
+              addition, when performing administrative tasks, you shall be
               subject to any posted guidelines or rules applicable to such
-              services.
+              responsibilities.
             </p>
           </div>
 
@@ -220,10 +220,9 @@
               2. Privacy Policy
             </h4>
             <p>
-              Your privacy is very important to us. We designed our Privacy
-              Policy to make important disclosures about how you can use our
-              services to share with others and how we collect and can use your
-              content and information.
+              We are committed to protecting the privacy of users. As an admin,
+              you are expected to uphold confidentiality and use any collected
+              data solely for official and authorized purposes.
             </p>
           </div>
 
@@ -232,13 +231,13 @@
             <h4
               class="text-xl font-semibold text-[#6A7337] border-b-2 border-[#8A9A5B] pb-1 mb-3"
             >
-              3. User Responsibilities
+              3. Admin Responsibilities
             </h4>
             <p>
-              As a user of the portal, you agree to provide accurate information
-              when registering and to keep this information updated. You are
-              responsible for maintaining the confidentiality of your account
-              and password.
+              As an admin, you agree to maintain accurate records, monitor
+              content, and ensure the portal's proper functioning. You are
+              responsible for the secure handling of administrative credentials
+              and actions performed under your account.
             </p>
           </div>
 
@@ -247,12 +246,13 @@
             <h4
               class="text-xl font-semibold text-[#6A7337] border-b-2 border-[#8A9A5B] pb-1 mb-3"
             >
-              4. Prohibited Activities
+              4. Prohibited Actions
             </h4>
             <p>
-              You may not access or use the portal for any purpose other than
-              that for which we make the portal available. Prohibited activities
-              include harassing, abusing, or harming another person.
+              Admins may not misuse their access by altering or deleting data
+              without authorization, sharing privileged information, or engaging
+              in any activities that compromise the security or integrity of the
+              portal.
             </p>
           </div>
 
@@ -264,15 +264,15 @@
               5. Changes to Terms
             </h4>
             <p>
-              We reserve the right to make changes to these terms at any time.
-              Your continued use of the portal following the posting of changes
-              will mean that you accept and agree to the changes.
+              We reserve the right to modify these terms at any time. Continued
+              use of the admin portal after changes are posted indicates
+              acceptance of the updated terms.
             </p>
           </div>
 
           <p class="text-gray-500 mt-1 italic">
             By clicking "I Understand", you acknowledge that you have read and
-            accept our terms of service.
+            accept the Admin Terms and Conditions.
           </p>
         </div>
 
