--- a/Dashboard.html
+++ b/Dashboard.html
@@ -342,7 +342,7 @@
                 fill: true,
               },
               {
-                label: "Accepted",
+                label: "Completed",
                 data: [50, 70, 60, 80, 90, 100, 200, 250, 207, 211, 312, 300],
                 backgroundColor: "rgba(16, 185, 129, 0.1)",
                 borderColor: "rgba(16, 185, 129, 1)",
